Remove unused resume link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="row">
           <div class="large-4 columns large-centered" id="name">
               <h1 class="text-center">David J. Mally</h1>
-              <p class="text-center"><a class="element" id="email-link" href="#">email</a> | <a href="https://github.com/djmally">github</a> | <!-- <a href="pdf/resume.pdf">resume</a> --> </p>
+              <p class="text-center"><a class="element" id="email-link" href="#">email</a> | <a href="https://github.com/djmally">github</a></p>
           </div>
       </div>
       <div class="row margin-20">
@@ -66,4 +66,3 @@
       <img src="https://www.brewster-jennings.com/pixel.gif"/>
   </body>
 </html>
-
