--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
           </div>
           <div class="row">
             <div class="large-20 columns large-centered">
-                <p>Hi! I'm David. I'm a software engineer at <a href="https://www.synack.com/">Synack</a>, where I build distributed systems that fuzz web applications for security vulnerabilities. I have bachelor's and master's degrees in computer science from the <a href="https://www.upenn.edu/">University of Pennsylvania</a>, with a focus on programming languages and computer security.</p>
-            </div>
+              <p>Hi! I'm David. I'm a security engineer at <a href="https://www.airtable.com/">Airtable</a>, and I used to do web fuzzing and distributed systems engineering at <a href="https://www.synack.com/">Synack</a>. I studied computer science at <a href="https://www.upenn.edu/">Penn</a>, with a focus on programming languages and computer security.</p>            </div>
             <div class="large-20 columns large-centered">
               <p>At Penn, I was a part of the <a href="https://www.stwing.upenn.edu/">Science &amp; Technology Wing (STWing)</a>, as well as <a href="https://wqhsradio.org">WQHS</a>, Penn's student-run radio station. Academically, I was a teaching assistant for Introduction to Computer Programming (CIS 110), Introduction to Computer Architecture (CIS 240), and Computer Organization and Design (CIS 371), and I co-taught <a href="http://cis198-2016s.github.io/">CIS 198: Rust Programming</a> in the spring 2016 semester with Kai Ninomiya &amp; Terry Sun.</p>
             </div>
